--- a/gryphon/Gemfile
+++ b/gryphon/Gemfile
@@ -30,6 +30,8 @@ gem 'jbuilder', '~> 2.5'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
+gem 'octokit', "~> 4.0"
+
 # Authentication
 gem 'omniauth-github'
 
